# RaytracerChallenge

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Canvas.cpp  Canvas.h  Matrix.cpp  Matrix.h  Ray.cpp  Ray.h  RaytracerUtils.cpp  RaytracerUtils.h  Shapes.cpp  Shapes.h  Tuple.cpp  Tuple.h  main.cpp
tst/: CMakeLists.txt  CanvasTest.cpp  MatrixTest.cpp  RayTest.cpp  TupleTest.cpp
